ignore errors quiting smtp, r=neil, bug 758878